# receipt-math-animated

./: .gitignore  canvas2d.ml  demo.html  dune  flake.nix  index.html  main.js  oklab.ml  receipt_math.js  receipt_math.ml
src/: canvas2d.ml  canvas2d.mli  dune  expr.ml  expr.mli  expr_float.ml  expr_float.mli  expr_int.ml  expr_int.mli  oklab.ml  oklab.mli  param.ml  param.mli  receipt_math.ml
test/: receipt_math_test.ml
