; Copy the compiled JS out to a stable name next to index.html.

(rule
 (targets receipt_math.js index.html)
 (deps bin/main.js bin/main.bc.js bin/index.html)
 (mode promote)
 (action
  (progn
   (copy bin/index.html index.html)
   (copy bin/main.js main.js)
   (bash "cat bin/main.bc.js | grep -v buildInfo > receipt_math.js"))))
